# madness

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .vimspector.json  AGENTS.md  BGLbuild  Build_RH5  CHANGES  CMakeLists.txt  GEMINI.md  IMPLEMENTATION_NOTES.md  INSTALL  INSTALL.md  INSTALL_CMake  Makedirlist  Makefile  Makefile.am  Makefile.in  OLDINSTALL  README.md  README_CC2  README_JOEL  README_PARSEC  README_TESSE.md  aclocal.m4  autogen.sh  build.sh  cmakecmd  cmakecmd_adrian  cmakecmd_adrianv2  cmakecmd_debug  cmakecmd_popos  cmakecmd_ubuntu2020  cmakecmd_v2  cmdCmake  compile_commands.json  configure  (+14 more)
doc/: CMakeLists.txt  INSTALL.md  Makefile  Makefile.am  Makefile.in  REPLICATION_API_MIGRATION.md  api.odt  applications.dox  applications.h  conf.py  configuration.dox  contribute.dox  contribute.h  contribution.dox  doxygen.cfg  doxygen.cfg.in  getting_started.dox  gettingstarted.odt  implementation.odt  index.rst  install.dox  install.h  libraries.dox  madness.bib  mainpage.dox  mainpage.h  numerical_library.md  parallel-runtime.odt  quantum.md  requirements.txt  runtime.md  style.dox  style.h
doc/CPS-model/: CPS-or-MapReduce-for-Madness.tex  GPU-design.txt  Makefile
doc/Latex/: Makefile  api.tex  gettingstarted.tex  implementation.tex  parallel-runtime.tex
doc/MapReduce-model/: A-MapReduce-like-Model-for-Madness.tex  Makefile  detex.sed
doc/contribution/: style.dox
doc/devsamp/: CMakeLists.txt.sample.in  simple_hf.cpp
doc/getting_started/: gstart_basics.dox  gstart_comp_run.dox  gstart_env_var.dox  gstart_functions.dox  gstart_io.dox  gstart_load_balance.dox  gstart_think_madness.dox
doc/libraries/: chemistry.dox  containers.dox  parallel_runtime.dox
doc/libraries/parallel_runtime/: futures.dox  mpi.dox  serialization.dox  threading.dox  world.dox  world_object.dox
doc/source/: conf.py  index.rst  runtime.md
doc/tutorial/: API.md  CMakeLists.txt  README.md  TODO.md  chemistry.md  test_runtime.cpp  tutorial.md
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  chem.h  example_doc.cc  example_doc.h  madchem.h  madness.h  madnessdirlist.h
src/apps/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  test_molresponse
src/apps/DFcode/: Ar-def.out  Ar.out  Makefile  Makefile.am  Makefile.in  README.txt  atomutil.cc  corepotential.cc  corepotential.h  distpm.cc  input  mcpfit.cc  moldft.cc  molecularbasis.cc  molecularbasis.h  molecule.cc  molecule.h  testmolbas.cc  testperiodic.cc  testpg.cc  testxc.cc  xcfunctional.cc  xcfunctional.h  xcfunctional_ldaonly.cc  xcfunctional_libxc.cc  xcfunctional_madxc.cc
src/apps/adrian/: CMakeLists.txt  GroundParameters.h  Notes.md  Plot_VTK.cc  Plot_VTK.h  ResponseFunction2.h  ResponseParameters.h  ResponsePotential.h  TDDFT.cc  TDDFT.h  TDHF_Basic_Operators2.cc  TDHF_Basic_Operators2.h  adrianXY.cc  density.cc  density.h  densityTest.cc  density_frequency_response_functions.h  driver4.cc  fvector.h  global_functions.h  iterate_freq.cc  iterate_tddft.cc  iterate_xy.cc  property.cc  property.h  property_functions.cc  property_functions.h  property_operators.cc  property_operators.h  response_space.h  response_vector.h  rjhascii.txt  runLinearResponse.cc  test_Gamma.cc  timer.h
src/apps/bryan/: CMakeLists.txt  ESInterface.h  GroundParameters.h  Makefile  Makefile.am  Old_TDA_Basic_Operators.h  Plot_VTK.h  ResponseFunction2.h  ResponseParameters.h  ResponsePotential.h  TDA.cc  TDA.h  TDA2.cc  TDA2.h  TDA3.cc  TDA3.h  TDA_Basic_Operators.h  TDHF.cc  TDHF.h  TDHF2.cc  TDHF2.h  TDHF_Basic_Operators.h  TDHF_Basic_Operators2.h  driver.cc  driver2.cc  driver3.cc  driver5.cc  gaussian.h  input  moldft_inputs  test_ops.cc
src/apps/cc2/: CMakeLists.txt  cc2.cc  test_callable.py
src/apps/chem/: 3-21g  6-31gss  AC.cc  AC.h  BSHApply.h  CC2.cc  CC2.h  CCOperators.cc  CCOperators.h  CCPotentials.cc  CCPotentials.h  CCStructures.cc  CCStructures.h  CISOperators.cc  CISOperators.h  CMakeLists.txt  CalculationParameters.h  CalculationParametersBase.h  CalculationParametersBaseMap.h  Complexcis.cc  Complexcis.h  ESInterface.h  GuessFactory.cc  GuessFactory.h  Makefile.am  MolecularOrbitals.cc  MolecularOrbitals.cpp  MolecularOrbitals.h  MolecularOrbitals_test.cpp  NWChem.cc  NWChem.h  Nemocomplex.cc  Nemocomplex.h  PNO.cpp  PNO.h  PNOF12Potentials.cpp  PNOF12Potentials.h  PNOGuessFunctions.cpp  PNOGuessFunctions.h  PNOParameters.cpp  (+104 more)
src/apps/cis/: CMakeLists.txt  cis.cpp  input  mad_cis_test_energy_he.py.calc_info.ref.json  mad_cis_test_symmetry_h2o.py.calc_info.ref.json  mad_cis_test_symmetry_h2o.py1.calc_info.ref.json  test_callable.py  test_energy_he.py  test_symmetry_h2o.py
src/apps/dirac/: CMakeLists.txt  DF.cc  DF.h  DFParameters.h  DFdriver.cc  DFinput_sample  DKops.h  ESInterface.h  InitParameters.h  README  fcwf.cc  fcwf.h  gaussian.cc  gaussian.h  polynomial.h  relops.cc  rk.cc
src/apps/examples/: 3dharmonic.cc  Envelope.h  LIBS.h  Makefile  Makefile.am  Makefile.in  RUNALL  bigboy.cc  bigboy.input  bigboy2.cc  binaryop.cc  colloid.cc  correlationfactor.h  csqrt.cc  dataloadbal.cc  dielectric.cc  dielectric_external_field.cc  fast.cc  functionio.cc  graveyard  gygi_soltion.cc  h2.cc  h2dft.cc  h2dynamic.cc  (+46 more)
src/examples/: 3dharmonic.cc  CMakeLists.txt  Makefile.am  ac_corr.cc  array_worldobject.cc  binaryop.cc  cc2.cc  colloid.cc  complex_h2.cc  cpp_test.cc  csqrt.cc  dataloadbal.cc  density_smoothing.cc  derivatives.cc  dielectric.cc  dielectric_external_field.cc  dirac-hatom.cc  distributed_array.cc  example1.cc  fred.cc  functionio.cc  gaussian.cc  graveyard  gygi_soltion.cc  h2.cc  h2dft.cc  h2dynamic.cc  hatom-2s-polar.cc  hatom.cc  hatom_1d.cc  hatom_energy.cc  hatom_sf_dirac.cc  he.cc  heat.cc  heat2.cc  hedft.cc  hefxc.cc  hehf.cc  helium_exact.cc  helium_mp2.cc  (+53 more)
src/external_packages/: Makefile.am
src/gtest/: Makefile.am
src/lib/: Makefile  Makefile.am  Makefile.in
src/madness/: CMakeLists.txt  Makefile.am  constants.h  fortran_ctypes.h  mad_types.h  madness_config.h  madness_libraries.dox
src/pymadness/: CMakeLists.txt  README.md  pyproject.toml
(+19298 files in other folders)
